--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
             <p class="apresentacao__conteudo__texto">Me chamo Bruna Barbosa Carrijo, tenho 25 anos e moro em Uberlândia-MG.</p>
 
-            <p class="apresentacao__conteudo__texto">No momento estou cursando Análise e Desenvolvimento de Sistemas, faço estágio na área de front-end na empresa CroSoften. Comecei como estagiária em Análise de Testes, mas após algum tempo me interessei pela parte de desenvolvimento. Sou uma pessoa comunicativa, proativa, com facilidade no aprendizado. Acredito que para ter evolução em qualquer área é necessário estar sempre estudando.</p>
+            <p class="apresentacao__conteudo__texto">Atualmente estou cursando Análise e Desenvolvimento de Sistemas, iniciei como estagiária em Análise de Testes, mas após algum tempo me interessei pela parte de desenvolvimento de software. Sou comunicativa, proativa e aprendo com facilidade. Acredito que para ter evolução em qualquer área é necessário o estudo contínuo. Tenho conhecimentos em HTML, CSS, JavaScript, SQL e linguagem C.</p>
 
             <h2 class="apresentacao__conteudo__titulo">Portfólio</h2>
             <p class="apresentacao__conteudo__texto">Com base nos estudos contínuos, criei alguns sites de acordo com os cursos realizados pela plataforma Alura.</p>
