atualização do portfólio

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
             <p class="apresentacao__conteudo__texto">Com base nos estudos contínuos, criei alguns sites de acordo com os cursos realizados pela plataforma Alura.</p>
             <a class="apresentacao__links__navegacao" href="https://alurabook-eight-iota.vercel.app/">AluraBook</a>
             <a class="apresentacao__links__navegacao" href="https://alura-plus-henna-five.vercel.app/">AluraPlus</a>
+            <a class="apresentacao__links__navegacao" href="https://adivinhe-o-numero-navy.vercel.app/">Adivinhe o número</a>
         </section>
         <img class="apresentacao__imagem" src="./assets/Imagem_design.png" alt="imagem-design">
 
